--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="dep/skript.jar" sourcepath="/Skript"/>
-	<classpathentry kind="lib" path="dep/Multiverse-Core-2.5.jar" sourcepath="dep/Multiverse-Core-2.5.jar">
+	<classpathentry kind="lib" path="dep/Multiverse-Core-2.5.jar" sourcepath="/Multiverse-Core">
 		<attributes>
 			<attribute name="javadoc_location" value="http://ci.onarandombox.com/job/Multiverse-Core/doxygen/"/>
 		</attributes>
